Fix modals not showing on top of loading screen

--- a/app/styles/_custom-modal.scss
+++ b/app/styles/_custom-modal.scss
@@ -1,5 +1,5 @@
 .ember-modal-overlay {
-  z-index: 100 !important;
+  z-index: 1001 !important;
 
   &.custom-overlay-modal {
     background-color: rgba(0, 0, 0, .5);
